--- a/assets/css/style-lp-1.less
+++ b/assets/css/style-lp-1.less
@@ -113,6 +113,28 @@
 		.inner-wrapper {
 			transform: translate(0);
 			top: 50px;
+
+			.cta {
+				background-color: #EF9D3C;
+				color: #FFF;
+				border: 1px solid #EF9D3C;
+				display: inline-block;
+				padding: 1em 3em;
+				outline: none;
+				text-decoration: none;
+				text-align: center;
+			    z-index: 0;
+			    transition: all ease-in-out 0.5s;
+			    overflow: hidden;
+			    position: relative;
+			    border: 0;
+			    // font-weight: bold;
+			    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+
+			    &:hover {
+			    	transform: scale(1.1);
+			    }
+			}
 		}
 
 		.hero-teaser {
