--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -410,6 +410,20 @@
 	}
 
 /////////////////////////////////////////////////////////////////////////////////
+// 6)  CHECKOUT
+/////////////////////////////////////////////////////////////////////////////////
+	body.woocommerce-checkout {
+		.em_send_order_top {
+			margin-top: 1rem;
+		}
+
+		.widerruf {
+			text-align: right;
+			text-decoration: underline;
+		}
+	}
+
+/////////////////////////////////////////////////////////////////////////////////
 // 11) PRODUCT TILE
 /////////////////////////////////////////////////////////////////////////////////
 
