--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -689,6 +689,119 @@ a:hover {
   color: #333;
   transform: scale(1.1);
 }
+.em-wc-terms {
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  font-size: 0.8rem;
+  margin-bottom: 10px;
+}
+.em-wc-terms p,
+.em-wc-terms li,
+.em-wc-terms a {
+  font-size: 0.8rem;
+  margin-bottom: 6px;
+}
+.em-wc-terms h1,
+.em-wc-terms h2,
+.em-wc-terms h3,
+.em-wc-terms h4,
+.em-wc-terms h5,
+.em-wc-terms h6 {
+  font-size: 14px;
+  line-height: 1.6;
+  margin: 12px 0 6px 0;
+}
+@media all and (min-width: 360px) and (max-width: 480px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 14px;
+  }
+}
+@media all and (min-width: 480px) and (max-width: 768px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 14px;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 16px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 16px;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1468px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 16px;
+  }
+}
+@media all and (min-width: 1468px) and (max-width: 1680px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 18px;
+  }
+}
+@media all and (min-width: 1680px) and (max-width: 1920px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 20px;
+  }
+}
+@media all and (min-width: 1920px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 20px;
+  }
+}
+@media all and (min-width: 2200px) {
+  .em-wc-terms h1,
+  .em-wc-terms h2,
+  .em-wc-terms h3,
+  .em-wc-terms h4,
+  .em-wc-terms h5,
+  .em-wc-terms h6 {
+    font-size: 22px;
+  }
+}
 .em-txt {
   margin-bottom: -10px;
 }
@@ -703,6 +816,7 @@ a:hover {
 .em-txt h6 {
   font-size: 16px;
   margin: 40px 0 20px 0;
+  line-height: 1.6;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .em-txt h1,
@@ -711,7 +825,7 @@ a:hover {
   .em-txt h4,
   .em-txt h5,
   .em-txt h6 {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 @media all and (min-width: 480px) and (max-width: 768px) {
@@ -721,7 +835,7 @@ a:hover {
   .em-txt h4,
   .em-txt h5,
   .em-txt h6 {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 @media all and (min-width: 768px) and (max-width: 1024px) {
@@ -1013,6 +1127,25 @@ footer#main-footer nav ul li a {
 }
 footer#main-footer nav ul li a:hover {
   color: #999;
+}
+footer#main-footer .payments strong {
+  height: auto;
+}
+footer#main-footer .payments figure {
+  display: inline-block;
+  width: 50px;
+  background-color: #fff;
+  margin-right: 20px;
+  padding: 2px;
+  text-align: center;
+}
+footer#main-footer .payments figure:last-child {
+  margin-right: 0;
+}
+@media all and (min-width: 768px) {
+  footer#main-footer .payments figure {
+    text-align: left;
+  }
 }
 body .instafeed .wdi_feed_container,
 body .instafeed .wdi_feed_wrapper,
