--- a/assets/css/style-locations.less
+++ b/assets/css/style-locations.less
@@ -20,6 +20,22 @@
 	section#cafes {
 		background-image: url(../img/bali-background-4.jpg);
 		background-size: cover;
+		position: relative;
+
+		&:before {
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 400px;
+			background: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
+		}
+
+		& > div {
+			position: relative;
+			z-index: 2;
+		}
 
 		.em-location-tile {
 			background: #FFF;
