--- a/assets/css/style-locations.less
+++ b/assets/css/style-locations.less
@@ -22,6 +22,10 @@
 		background-size: cover;
 		position: relative;
 
+		@media all and (min-width: @breakpoint3_mf) {
+			padding-top: 50px;
+		}
+
 		&:before {
 			content: "";
 			position: absolute;
@@ -32,6 +36,17 @@
 			background: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
 		}
 
+		&:after {
+            content: "";
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            width: 100%;
+            height: 120px;
+            background-image: url(../img/bali-background-2.png);
+            background-size: cover;
+        }
+
 		& > div {
 			position: relative;
 			z-index: 2;
@@ -39,6 +54,7 @@
 
 		.em-location-tile {
 			background: #FFF;
+			box-shadow: 0 0 25px rgba(0, 0, 0, .1);
 
 			a {
 				display: block;
@@ -99,14 +115,108 @@
 
 	section#merchants {
 
-		
+		h3 {
+			font-size: 1.2em;
+			font-weight: 700;
+			display: block;
+			margin-bottom: 15px;
+		}
+
+		ul {
+			li {
+				position: relative;
+				display: block;
+				margin-bottom: 15px;
+
+				&:before {
+					font-family: 'themify';
+					content: "\e693";
+					position: absolute;
+					top: 1px;
+					left: 0;
+					font-size: 16px;
+				}
+
+				strong {
+					
+				}
+
+				div {
+					
+				}
+			}
+		}
 	}
 
 ////////////////////////////////////////////////////////////////////////////////////
-// CONTACT SECTION
+// GOOGLE MAPS SECTION
 ////////////////////////////////////////////////////////////////////////////////////
 
-	section#contact {
+	section#google-maps-contact {
+		background-image: url(../img/bali-background-4.jpg);
+		background-size: cover;
+		position: relative;
 
-		
+		&:before {
+			content: '';
+			position: absolute;
+			z-index: 0;
+			height: 250px;
+			width: 100%;
+			top: 0;
+			left: 0;
+			background: #FFF;
+		}
+
+		&:after {
+			content: "";
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			height: 400px;
+			background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+		}
+
+		.google-maps,
+		.contact {
+			position: relative;
+			z-index: 1;
+		}
+
+		.google-maps {
+			height: 500px;
+			margin-bottom: 80px;
+			box-shadow: 0 0 25px rgba(0, 0, 0, .1);
+		}
+
+		.contact {
+
+		}
+
+		input,
+		textarea {
+			background: transparent;
+		}
+
+		.checkboxes {
+			font-size: 14px;
+
+			.caption {
+				margin: 0 25px 5px 0;
+			}
+
+			.boxes {
+
+				.wpcf7-list-item {
+					width: 150px;
+					margin: 0;
+				}
+
+				.fs-checkbox-marker {
+					margin-right: 10px !important;
+				}
+
+			}
+		}
 	}
