locations & form fix

--- a/assets/css/style-locations.less
+++ b/assets/css/style-locations.less
@@ -52,6 +52,14 @@
 			z-index: 2;
 		}
 
+		.coming-soon {
+			text-align: center;
+			font-weight: 700;
+			font-size: 1.3em;
+			text-transform: uppercase;
+			.font2;
+		}
+
 		.em-location-tile {
 			background: #FFF;
 			box-shadow: 0 0 25px rgba(0, 0, 0, .1);
@@ -194,6 +202,19 @@
 
 		}
 
+		h4,
+		.address {
+			font-size: 1em;
+			display: block;
+			margin-bottom: 5px;
+			font-weight: 400;
+			.font1;
+		}
+
+		h4 {
+			font-weight: 700;
+		}
+
 		input,
 		textarea {
 			background: transparent;
@@ -217,6 +238,17 @@
 					margin-right: 10px !important;
 				}
 
+			}
+		}
+
+		.wpcf7-form-control-wrap.privacy-policy {
+			display: inline-block;
+			width: auto;
+			position: relative;
+			top: 3px;
+
+			.fs-checkbox-marker {
+				margin-right: 10px;
 			}
 		}
 	}
