--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -788,4 +788,15 @@
                 margin-bottom: 0;
             }
         }
+
+        .wpcf7-form-control-wrap.privacy-policy {
+            display: inline-block;
+            width: auto;
+            position: relative;
+            top: 3px;
+
+            .fs-checkbox-marker {
+                margin-right: 10px;
+            }
+        }
     }
