--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -252,10 +252,14 @@
             top: -2px;
             left: 0;
             width: 100%;
-            height: 120px;
             transform: rotate(180deg);
             background-image: url(../img/bali-background-2.png);
             background-size: cover;
+            height: 40px;
+
+            @media all and (min-width: @breakpoint3_mf) {
+                height: 120px;
+            }
         }
 
         &:before {
@@ -797,6 +801,119 @@
 
             .fs-checkbox-marker {
                 margin-right: 10px;
+            }
+        }
+    }
+
+//////////////////////////////////////////////////////
+// POST TILE 
+//////////////////////////////////////////////////////
+
+    .em-post-tile-mbc {
+        height: 100%;
+
+        .box {
+            position: relative;
+            overflow: hidden;
+            background: #FFF;
+            box-shadow: 0 0 25px rgba(0, 0, 0, .1);
+            height: 100%;
+            padding-bottom: 75px;
+
+            .media {
+                display: block;
+                width: 100%;
+                height: auto;
+                position: relative;
+                overflow: hidden;
+
+                figure {
+                    position: relative;
+                    overflow: hidden;
+                }
+
+                img,
+                .no-media {
+                    transition: all ease-in-out .2s;
+                }
+
+                img {
+                    width: 100%;
+                    height: auto;
+                    display: block;
+                }
+
+                .no-media {
+                    width: 100%;
+                    height: 250px;
+                    background: rgba(0, 0, 0, .2);
+                    position: relative;
+
+                    i {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        font-size: 30px;
+                        color: rgba(0, 0, 0, .5);
+                    }
+                }
+            }
+
+            .date {
+                color: @darkblue;
+                margin-bottom: 15px;
+                font-weight: 400;
+                font-size: 1.2em;
+            }
+
+            .content {
+                z-index: 2;
+
+                .inner {
+                    background: #fff;
+                    padding: 25px 25px 0 25px;
+
+                    .topic {
+                        font-size: 12px;
+                        color: #AAA;
+                        line-height: 1.5em;
+                    }
+
+                    header {
+                        h3 {
+                            font-size: 1.5em;
+                            font-weight: 700;
+                            margin-bottom: 25px;
+                        }
+                    }
+
+                    .txt {
+                        font-size: 14px;
+                        line-height: 1.5;
+
+                        a {
+                            color: #000;
+                        }
+                    }
+
+                    .more {
+                        font-size: 20px;
+                        position: absolute;
+                        bottom: 25px;
+                        right: 25px;
+                    }
+
+                }
+            }
+
+            &:hover {
+                .media {
+                    img,
+                    .no-media {
+                        transform: scale(1.2);
+                    }
+                }
             }
         }
     }
