pdp - select formstone switch off bugfix

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -390,6 +390,14 @@
         }
     }
 
+    select {
+        color: #FFF;
+        font-size: 1.1em;
+        background: url(../img/ico-angle-down.svg) no-repeat;
+        background-size: 15px;
+        background-position: right 15px center;
+    }
+
 ////////////////////////////////////////////////////////////////////////////////////
 // GENERAL PROJECT SPECIFIC STYLES
 ////////////////////////////////////////////////////////////////////////////////////
