--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -145,6 +145,11 @@
 				tr {
 					td {
 						padding: 20px 0 0 0;
+
+						&.label,
+						&.value {
+							width: 50%;
+						}
 					}
 				}
 
