GetResponse Newsletter Overlay Implementation

--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -107,6 +107,8 @@
 	@black: #000;
 	@white: #FFF;
 	@darkblue: #033142;
+    @blue: #0090D7;
+    @balistar_turquoise: #31b7bc;
 
 ////////////////////////////////////////////////////////////////////////////////////
 // PROJECT SPECIFIC ELEMENTS
@@ -137,6 +139,24 @@
                 background: #000;
                 color: #FFF;
             }
+        }
+
+        &.btn-orange {
+            background-color: #EF9D3C;
+            color: #FFF;
+            border: 1px solid #EF9D3C;
+            display: inline-block;
+            padding: 1em 3em;
+            outline: none;
+            text-decoration: none;
+            text-align: center;
+            z-index: 0;
+            transition: all ease-in-out 0.5s;
+            overflow: hidden;
+            position: relative;
+            border: 0;
+            // font-weight: bold;
+            box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
         }
     }
 
