Desktop styling implemented

--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -16,6 +16,7 @@
 	// @breakpoint3: 768px;
 	// @breakpoint4: 1024px;
 	// @breakpoint5: 1280px;
+	@breakpoint-1200: 1308px; // wrapper-1200 reaches max-width
 	// @breakpoint6: 1468px;
 	// @breakpoint7: 1680px;
 	// @breakpoint8: 1920px;
