--- a/assets/css/style-company.less
+++ b/assets/css/style-company.less
@@ -135,16 +135,28 @@ section#product-showcase {
 
 section#all-products {
 
+	@media all and (min-width: @breakpoint3) {
+		margin-top: 100px;
+	}
+	
 	[class*="wrapper"] {
 
 		.row {
 
+			@media all and (min-width: @breakpoint3) {
+				position: relative;
+			}
+			
 			[class*="col_"] {
 				padding: 0 20px;
 				
 				// PATTERN
 				&.pattern {
 					border-bottom: 0;
+					
+					@media all and (min-width: @breakpoint3) {
+						position: static;
+					}
 					
 					&::before {
 						display: none;
@@ -163,23 +175,75 @@ section#all-products {
 							display: block;
 						}
 					}
-				}
-				
-				img {
 					
-				}
-				
-				.btn-line-left {
-					color: @white;
-					.p;
-					
-					&::before {
-						background-color: @white;
+					img {
+						@media all and (min-width: @breakpoint3) {
+							position: absolute;
+							width: 90%;
+							margin-left: 15px;
+							top: -25%;
+							left: 50%;
+							-webkit-transform: translateX(-50%);
+							transform: translateX(-50%);
+							z-index: 1;
+						}
+						
+						@media all and (min-width: @breakpoint-1200) {
+							top: -190px;
+						}
 					}
 				}
-			
+				
+				&.no-pattern {
+					
+					@media screen and (min-width: @breakpoint3) {
+						display: -webkit-box;
+						display: -ms-flexbox;
+						display: flex;
+						-webkit-box-orient: vertical;
+						-webkit-box-direction: normal;
+						-ms-flex-direction: column;
+						-webkit-box-orient: vertical;
+						-webkit-box-direction: normal;
+						-ms-flex-direction: column;
+						flex-direction: column;
+						-webkit-box-pack: end;
+						-ms-flex-pack: end;
+						justify-content: flex-end;
+						-webkit-box-align: end;
+						-ms-flex-align: end;
+						align-items: flex-end;
+						height: 41vw;
+						padding-right: 5%;
+						border: none;
+						margin-left: -1px; // REMOVES GLITCHY WHITE BORDER BETWEEN COLUMNS ON CHROME
+					}
+					
+					@media all and (min-width: @breakpoint-1200) {
+						height: 500px;
+					}
+					
+					.btn-line-left {
+						color: @white;
+						.p;
+						z-index: 2;
+
+						@media screen and (min-width: @breakpoint3) {
+							margin-bottom: 30px;
+						}
+						
+						@media all and (min-width: @breakpoint-1200) {
+							margin-bottom: 45px;
+						}
+						
+						&::before {
+							background-color: @white;
+						}
+					}
+				}
+				
 				&.btn-wrapper {
-					margin-top: 30px;
+					margin-top: 40px;
 					text-align: center;
 					
 					a.btn {
@@ -227,7 +291,7 @@ section#highlight {
 		position: relative;
 		
 		h2 {
-			margin-bottom: 40px;
+			margin-bottom: 70px;
 		}
 		
 		.row {
@@ -242,6 +306,16 @@ section#highlight {
 						width: 150px;
 						height: 150px;
 						border-radius: 50%;
+						
+						@media screen and (min-width: @breakpoint3) {
+							width: 130px;
+							height: 130px;
+						}
+						
+						@media screen and (min-width: @breakpoint4) {
+							width: 150px;
+							height: 150px;
+						}
 					}
 
 					.content {
@@ -251,12 +325,26 @@ section#highlight {
 						@media screen and (min-width: @breakpoint2) {
 							padding: 0 25%;
 						}
+						
+						@media screen and (min-width: @breakpoint3) {
+							padding: 0;
+						}
+						
+						@media screen and (min-width: @breakpoint4) {
+							padding: 0 20px;
+						}
 
 						p {
 							margin-bottom: 40px;
 						}
 					}
 				}
+			}
+		}
+		
+		.em-content-repeater {
+			@media screen and (min-width: @breakpoint3) {
+				padding-top: 100px;
 			}
 		}
 	}
@@ -312,7 +400,7 @@ section#contacts {
 
 			h2 {
 				width: 100%;
-				margin-bottom: 40px;
+				margin-bottom: 70px;
 			}
 			
 			[class*="col_"] { 
@@ -320,43 +408,51 @@ section#contacts {
 				
 				figure {
 					height: 0;
-					padding-bottom: 80%;
+					padding-bottom: 60%;
+					
+					@media screen and (min-width: @breakpoint3) {
+						padding-bottom: 70%;
+					}
 				}
 				
 				.content {
 					padding: 30px 20px;
 					text-align: center;
 
-//					@media screen and (min-width: @breakpoint2) {
-//						padding: 0 20%;
-//					}
-
 					h4 {
 						margin-top: 0;
 						text-transform: uppercase;
 						font-size: 14px;
+						color: fade(@black, 80%);
 					}
 
 					h3 {
 						margin-top: 13px;
-						font-family: @font2;
+						font-family: @font1;
+						font-weight: 500;
 						text-transform: none;
 						font-size: 25px;
+						
+						@media screen and (min-width: @breakpoint3) {
+							margin-top: 15px;
+						}
 					}
 
 					p {
 						margin: 0;
 						margin-top: 10px;
 						font-size: 15px;
+						.p;
+						color: fade(@black, 80%);
+						
+						@media screen and (min-width: @breakpoint3) {
+							margin-top: 12px;
+						}
 
 						a {
-							.p;
 							margin: 0;
-					
-						}
-						
-						&.body-txt {
-							margin-top: 20px;
+							font-weight: 400;
+							color: fade(@black, 80%);
 						}
 					}
 					
@@ -366,7 +462,11 @@ section#contacts {
 //						.p;
 						float: none;
 						font-weight: bold;
-						font-size: 17px;
+						font-size: 19px;
+						
+						@media screen and (min-width: @breakpoint3) {
+							margin-top: 12px;
+						}
 					}
 				}
 			}
