--- a/assets/css/style-engagement.less
+++ b/assets/css/style-engagement.less
@@ -45,3 +45,75 @@ section#content {
 		font-weight: 500;
 	}
 }
+
+////////////////////////////////////////////////////////////////////////////////////
+// NEWS SECTION
+////////////////////////////////////////////////////////////////////////////////////
+
+section#news {
+	position: relative;
+	background-image: url(../img/bali-background-4.jpg);
+	background-size: cover;
+
+	&:before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 200px;
+		background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
+	}
+
+	&:after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 50px;
+		background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+	}
+	
+	[class*="wrapper-"] {
+		
+		@media all and (min-width: @breakpoint4_mf) {
+			position: relative;
+			
+			&:before {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 429px;
+				height: 283px;
+				background-image: url(../img/kaffeefleck.svg);
+				background-size: contain;
+				background-repeat: no-repeat;
+				z-index: 11;
+				-webkit-transform: translate(-25%, -25%) rotate(270deg);
+				transform: translate(-25%, -25%) rotate(270deg);
+			}
+		}
+		
+		h2 {
+			position: relative;
+			margin-bottom: 70px;
+		}
+		
+		.em-filter-bar {
+			display: none;
+		}
+		
+		.btn-wrapper {
+			text-align: right;
+			
+			a {
+				display: inline-block;
+				margin-top: 70px;
+				z-index: 1;
+				float: none;
+			}
+		}
+	}
+}
