--- a/assets/css/style-lp-1.less
+++ b/assets/css/style-lp-1.less
@@ -181,6 +181,95 @@
 	}
 
 ////////////////////////////////////////////////////////////////////////////////////
+// VIDEO
+////////////////////////////////////////////////////////////////////////////////////
+
+#video-teaser {
+	.video-container { 
+		position: relative; 
+		padding-bottom: 56.25%;
+		overflow: hidden;
+		max-width: 100%;
+		height: auto;
+	} 
+
+	.video-container iframe,
+	.video-container object,
+	.video-container embed { 
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
+////////////////////////////////////////////////////////////////////////////////////
+// TESTIMONIALS
+////////////////////////////////////////////////////////////////////////////////////
+
+#testimonials {
+	position: relative;
+	
+	h2 {
+		position: relative;
+		margin-bottom: 60px;
+	}
+	
+	p {
+		margin-bottom: 0;
+
+		&.sub {
+			margin-bottom: 20px;
+		}
+	}
+	
+	.owl-item {
+		.slide {
+			.em-testimonial-tile {
+				display: block;
+			}
+		}
+	}
+	
+	.em-testimonial-tile {
+		display: none;
+		text-align: center;
+		
+		.name-position {
+			
+			span {
+				margin-top: 25px;
+				margin-bottom: 5px;
+				font-size: 20px;
+				.font1;
+				font-weight: 600;
+				color: #033142;
+				text-transform: none;
+				
+				&.name {}
+				&.position {
+					font-size: 18px;
+					font-weight: 400;
+					color: fade(@darkblue, 50%);
+				}
+			}
+		}
+		
+		.company {
+			font-size: 20px;
+			.font2;
+			font-weight: 300;
+			color: #033142;
+		}
+
+		.statement {
+			margin-top: 10px;
+		}
+	}
+}
+
+////////////////////////////////////////////////////////////////////////////////////
 // TEASER SECTION
 ////////////////////////////////////////////////////////////////////////////////////
 
