--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -157,25 +157,34 @@
         box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.15);
 
         nav#main-nav {
+          
+          @media screen and (min-width: @breakpoint5) {
+            padding: 18px 0;
+          }
+          
             ul {
                 & > li {
                     a {
-                        color: #033142;
-                        font-size: 18px;
-                        padding: 22px 0;
-                        text-transform: uppercase;
+                      color: #033142;
+                      font-size: 18px;
+                      padding: 22px 0;
+                      text-transform: uppercase;
+                      
+                      @media screen and (min-width: @breakpoint5) {
+                        font-size: 15px;
+                      }
 
-                        &:hover {
-                            color: #033142;
-                            border-bottom: 3px solid #033142;
-                        }
+                      &:hover {
+                          color: #033142;
+                          border-bottom: 3px solid #033142;
+                      }
                     }
 
                     &.current-menu-item > a,
                     &.current-menu-parent > a {
-                        font-weight: bold;
-                        color: #033142;
-                        border-bottom: 3px solid #033142;
+                      font-weight: bold;
+                      color: #033142;
+                      border-bottom: 3px solid #033142;
                     }
                 }
             }
@@ -230,6 +239,152 @@
                 background: #033142;
             }
         }
+      
+      /////////////// MOBILE VIEW ///////////////
+
+      @media all and (max-width: 1279px) {
+        width: 100vw;
+
+        .c-hamburger {
+          display: block;
+        }
+
+        #nav-modal {
+          position: fixed;
+          z-index: 99999;
+          width: 100%;
+          height: 110vh;
+          right: -100vw;
+          top: -35px;
+          background: #FFF;
+          box-sizing: border-box;
+          padding: 50px;
+          padding-top: 80px;
+          overflow-y: auto;
+          -webkit-overflow-scrolling: touch;
+
+          &:after {
+            content: '';
+            position: absolute;
+            z-index: 99999;
+            width: 100%;
+            height: 20px;
+            background: #FFF;
+            left: 0;
+            top: 0;
+          }
+
+          #main-nav {
+            float: none;
+            clear: both;
+            padding-top: 50px;
+
+            ul {
+              background: transparent;
+
+              li {
+                display: block;
+                margin-left: 0;
+                font-size: 22px;
+
+                a {
+                  display: block;
+                  position: relative;
+                  padding: 15px 0;
+                  color: #000;
+
+                  &:hover {
+                    color: #f4781c !important;
+                    background: transparent;
+
+                    &::before {
+                      color: #f4781c !important;
+                    }
+                  }
+                }
+              }
+
+              &#menu-main {
+
+                & > li {
+
+                  & > a {
+                    line-height: 3 !important;
+                  }
+                }
+              }
+            }
+
+            .menu-item-has-children {
+
+              .sub-menu {
+                display: block;
+                position: relative;
+                padding-top: 0;
+                //						padding-left: 5px;
+                top: 0;
+
+                li {
+                  a {
+                    background: transparent;
+                    border: 0;
+                    padding-left: 20px;
+                    font-size: 18px;
+                    color: rgba(0,0,0,.4);
+                  }
+
+                  a::before {
+                    color: rgba(0,0,0,.4);
+                    font-size: 12px;
+                    left: 5px;
+                    //                                top: 18px;
+                  }
+
+                  // INNER SUB-MENUS
+                  & > .sub-menu {
+                    margin-left: 20px;
+
+                    li {
+                      & > .sub-menu {
+                        margin-left: 20px;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+
+          }
+
+          .btn-login, 
+          .langselect {
+            float: left !important;
+
+            .lang-selector-links {
+              margin-bottom: 25px;
+              margin-left: 0;
+            }
+
+            .btn-login {
+              margin-bottom: 25px;
+            }
+          }
+
+          .shopping-cart-btn {
+            display: none;
+            float: left;
+            margin-left: 25px;
+          }
+
+
+        }
+
+        .shopping-cart-btn-mobile {
+          display: block;
+          display: none;
+        }
+
+      }
     }
 
 ////////////////////////////////////////////////////////////////////////////////////
