mybali child update before update

--- a/assets/css/style-engagement.less
+++ b/assets/css/style-engagement.less
@@ -77,6 +77,10 @@ section#news {
 	
 	[class*="wrapper-"] {
 		
+		@media screen and (min-width: @breakpoint3) {
+//			padding-top: 150px;
+		}
+			
 		@media all and (min-width: @breakpoint4_mf) {
 			position: relative;
 			
