--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -433,6 +433,8 @@
 /////////////////////////////////////////////////////////////////////////////////
 
 	.em-product-tile-4 {
+		height: auto;
+
 		&:before {
 			content: "";
 			position: absolute;
@@ -483,6 +485,8 @@
 			font-family: @font2;
 			text-transform: uppercase;
 			font-size: 1em;
+			word-break: break-all;
+			padding: 0 10px;
 
 			@media all and (min-width: @breakpoint3_mf) {
 				font-size: 2em;
@@ -492,7 +496,24 @@
 		.pt-images {
 			position: relative;
 			z-index: 100;
-			padding: 20px 50px;
+			margin: 20px 50px;
+
+            &:before{
+                content: "";
+                display: block;
+                padding-top: 150%;
+            }
+
+            img {
+				width: auto;
+				height: auto;
+				max-width: 100%;
+				max-height: 100%;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+            }
 		}
 
 		.description {
