break word and not break all

--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -485,7 +485,7 @@
 			font-family: @font2;
 			text-transform: uppercase;
 			font-size: 1em;
-			word-break: break-all;
+			word-break: break-word;
 			padding: 0 10px;
 
 			@media all and (min-width: @breakpoint3_mf) {
