--- a/plugins/woocommerce/assets/css/style-wc-child.css
+++ b/plugins/woocommerce/assets/css/style-wc-child.css
@@ -647,7 +647,7 @@ body.woocommerce-checkout .widerruf {
   font-family: 'Condor', sans-serif;
   text-transform: uppercase;
   font-size: 1em;
-  word-break: break-all;
+  word-break: break-word;
   padding: 0 10px;
 }
 @media all and (min-width: 769px) {
