--- a/assets/css/style-lp-1.less
+++ b/assets/css/style-lp-1.less
@@ -492,6 +492,10 @@
 			height: 50px;
 			background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
 		}
+
+		.wdi_follow_btn {
+			display: none;
+		}
 	}
 
 ////////////////////////////////////////////////////////////////////////////////////
