--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -110,6 +110,7 @@
 	@darkblue: #033142;
     @blue: #0090D7;
     @balistar_turquoise: #31b7bc;
+    @tiger_yellow: #ef9d3c;
 
 ////////////////////////////////////////////////////////////////////////////////////
 // PROJECT SPECIFIC ELEMENTS
