--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
- Theme Name:   Mybali Child Theme
+ Theme Name:   MybaliCoffe Custom Child Theme
  Theme URI:    http://eichmeister.de
- Description:  Mybali Child Theme
+ Description:  MybaliCoffee Custom Child Theme
  Author:       Tim Köck
- Author URI:   http://timkoeck.com
+ Author URI:   https://xtra.dev
  Template:     eichmeister
  Version:      1.0.0
  License:      GNU General Public License v2 or later
